syntax = "proto3";

package pb.geo;

option go_package = "pbgeo";

enum CountryAlpha2Code {
  COUNTRY_ALPHA_2_CODE_NONE = 0;
  COUNTRY_ALPHA_2_CODE_AD = 1;
  COUNTRY_ALPHA_2_CODE_AE = 2;
  COUNTRY_ALPHA_2_CODE_AF = 3;
  COUNTRY_ALPHA_2_CODE_AG = 4;
  COUNTRY_ALPHA_2_CODE_AI = 5;
  COUNTRY_ALPHA_2_CODE_AL = 6;
  COUNTRY_ALPHA_2_CODE_AM = 7;
  COUNTRY_ALPHA_2_CODE_AO = 8;
  COUNTRY_ALPHA_2_CODE_AQ = 9;
  COUNTRY_ALPHA_2_CODE_AR = 10;
  COUNTRY_ALPHA_2_CODE_AS = 11;
  COUNTRY_ALPHA_2_CODE_AT = 12;
  COUNTRY_ALPHA_2_CODE_AU = 13;
  COUNTRY_ALPHA_2_CODE_AW = 14;
  COUNTRY_ALPHA_2_CODE_AX = 15;
  COUNTRY_ALPHA_2_CODE_AZ = 16;
  COUNTRY_ALPHA_2_CODE_BA = 17;
  COUNTRY_ALPHA_2_CODE_BB = 18;
  COUNTRY_ALPHA_2_CODE_BD = 19;
  COUNTRY_ALPHA_2_CODE_BE = 20;
  COUNTRY_ALPHA_2_CODE_BF = 21;
  COUNTRY_ALPHA_2_CODE_BG = 22;
  COUNTRY_ALPHA_2_CODE_BH = 23;
  COUNTRY_ALPHA_2_CODE_BI = 24;
  COUNTRY_ALPHA_2_CODE_BJ = 25;
  COUNTRY_ALPHA_2_CODE_BL = 26;
  COUNTRY_ALPHA_2_CODE_BM = 27;
  COUNTRY_ALPHA_2_CODE_BN = 28;
  COUNTRY_ALPHA_2_CODE_BO = 29;
  COUNTRY_ALPHA_2_CODE_BQ = 30;
  COUNTRY_ALPHA_2_CODE_BR = 31;
  COUNTRY_ALPHA_2_CODE_BS = 32;
  COUNTRY_ALPHA_2_CODE_BT = 33;
  COUNTRY_ALPHA_2_CODE_BV = 34;
  COUNTRY_ALPHA_2_CODE_BW = 35;
  COUNTRY_ALPHA_2_CODE_BY = 36;
  COUNTRY_ALPHA_2_CODE_BZ = 37;
  COUNTRY_ALPHA_2_CODE_CA = 38;
  COUNTRY_ALPHA_2_CODE_CC = 39;
  COUNTRY_ALPHA_2_CODE_CD = 40;
  COUNTRY_ALPHA_2_CODE_CF = 41;
  COUNTRY_ALPHA_2_CODE_CG = 42;
  COUNTRY_ALPHA_2_CODE_CH = 43;
  COUNTRY_ALPHA_2_CODE_CI = 44;
  COUNTRY_ALPHA_2_CODE_CK = 45;
  COUNTRY_ALPHA_2_CODE_CL = 46;
  COUNTRY_ALPHA_2_CODE_CM = 47;
  COUNTRY_ALPHA_2_CODE_CN = 48;
  COUNTRY_ALPHA_2_CODE_CO = 49;
  COUNTRY_ALPHA_2_CODE_CR = 50;
  COUNTRY_ALPHA_2_CODE_CU = 51;
  COUNTRY_ALPHA_2_CODE_CV = 52;
  COUNTRY_ALPHA_2_CODE_CW = 53;
  COUNTRY_ALPHA_2_CODE_CX = 54;
  COUNTRY_ALPHA_2_CODE_CY = 55;
  COUNTRY_ALPHA_2_CODE_CZ = 56;
  COUNTRY_ALPHA_2_CODE_DE = 57;
  COUNTRY_ALPHA_2_CODE_DJ = 58;
  COUNTRY_ALPHA_2_CODE_DK = 59;
  COUNTRY_ALPHA_2_CODE_DM = 60;
  COUNTRY_ALPHA_2_CODE_DO = 61;
  COUNTRY_ALPHA_2_CODE_DZ = 62;
  COUNTRY_ALPHA_2_CODE_EC = 63;
  COUNTRY_ALPHA_2_CODE_EE = 64;
  COUNTRY_ALPHA_2_CODE_EG = 65;
  COUNTRY_ALPHA_2_CODE_EH = 66;
  COUNTRY_ALPHA_2_CODE_ER = 67;
  COUNTRY_ALPHA_2_CODE_ES = 68;
  COUNTRY_ALPHA_2_CODE_ET = 69;
  COUNTRY_ALPHA_2_CODE_FI = 70;
  COUNTRY_ALPHA_2_CODE_FJ = 71;
  COUNTRY_ALPHA_2_CODE_FK = 72;
  COUNTRY_ALPHA_2_CODE_FM = 73;
  COUNTRY_ALPHA_2_CODE_FO = 74;
  COUNTRY_ALPHA_2_CODE_FR = 75;
  COUNTRY_ALPHA_2_CODE_GA = 76;
  COUNTRY_ALPHA_2_CODE_GB = 77;
  COUNTRY_ALPHA_2_CODE_GD = 78;
  COUNTRY_ALPHA_2_CODE_GE = 79;
  COUNTRY_ALPHA_2_CODE_GF = 80;
  COUNTRY_ALPHA_2_CODE_GG = 81;
  COUNTRY_ALPHA_2_CODE_GH = 82;
  COUNTRY_ALPHA_2_CODE_GI = 83;
  COUNTRY_ALPHA_2_CODE_GL = 84;
  COUNTRY_ALPHA_2_CODE_GM = 85;
  COUNTRY_ALPHA_2_CODE_GN = 86;
  COUNTRY_ALPHA_2_CODE_GP = 87;
  COUNTRY_ALPHA_2_CODE_GQ = 88;
  COUNTRY_ALPHA_2_CODE_GR = 89;
  COUNTRY_ALPHA_2_CODE_GS = 90;
  COUNTRY_ALPHA_2_CODE_GT = 91;
  COUNTRY_ALPHA_2_CODE_GU = 92;
  COUNTRY_ALPHA_2_CODE_GW = 93;
  COUNTRY_ALPHA_2_CODE_GY = 94;
  COUNTRY_ALPHA_2_CODE_HK = 95;
  COUNTRY_ALPHA_2_CODE_HM = 96;
  COUNTRY_ALPHA_2_CODE_HN = 97;
  COUNTRY_ALPHA_2_CODE_HR = 98;
  COUNTRY_ALPHA_2_CODE_HT = 99;
  COUNTRY_ALPHA_2_CODE_HU = 100;
  COUNTRY_ALPHA_2_CODE_ID = 101;
  COUNTRY_ALPHA_2_CODE_IE = 102;
  COUNTRY_ALPHA_2_CODE_IL = 103;
  COUNTRY_ALPHA_2_CODE_IM = 104;
  COUNTRY_ALPHA_2_CODE_IN = 105;
  COUNTRY_ALPHA_2_CODE_IO = 106;
  COUNTRY_ALPHA_2_CODE_IQ = 107;
  COUNTRY_ALPHA_2_CODE_IR = 108;
  COUNTRY_ALPHA_2_CODE_IS = 109;
  COUNTRY_ALPHA_2_CODE_IT = 110;
  COUNTRY_ALPHA_2_CODE_JE = 111;
  COUNTRY_ALPHA_2_CODE_JM = 112;
  COUNTRY_ALPHA_2_CODE_JO = 113;
  COUNTRY_ALPHA_2_CODE_JP = 114;
  COUNTRY_ALPHA_2_CODE_KE = 115;
  COUNTRY_ALPHA_2_CODE_KG = 116;
  COUNTRY_ALPHA_2_CODE_KH = 117;
  COUNTRY_ALPHA_2_CODE_KI = 118;
  COUNTRY_ALPHA_2_CODE_KM = 119;
  COUNTRY_ALPHA_2_CODE_KN = 120;
  COUNTRY_ALPHA_2_CODE_KP = 121;
  COUNTRY_ALPHA_2_CODE_KR = 122;
  COUNTRY_ALPHA_2_CODE_KW = 123;
  COUNTRY_ALPHA_2_CODE_KY = 124;
  COUNTRY_ALPHA_2_CODE_KZ = 125;
  COUNTRY_ALPHA_2_CODE_LA = 126;
  COUNTRY_ALPHA_2_CODE_LB = 127;
  COUNTRY_ALPHA_2_CODE_LC = 128;
  COUNTRY_ALPHA_2_CODE_LI = 129;
  COUNTRY_ALPHA_2_CODE_LK = 130;
  COUNTRY_ALPHA_2_CODE_LR = 131;
  COUNTRY_ALPHA_2_CODE_LS = 132;
  COUNTRY_ALPHA_2_CODE_LT = 133;
  COUNTRY_ALPHA_2_CODE_LU = 134;
  COUNTRY_ALPHA_2_CODE_LV = 135;
  COUNTRY_ALPHA_2_CODE_LY = 136;
  COUNTRY_ALPHA_2_CODE_MA = 137;
  COUNTRY_ALPHA_2_CODE_MC = 138;
  COUNTRY_ALPHA_2_CODE_MD = 139;
  COUNTRY_ALPHA_2_CODE_ME = 140;
  COUNTRY_ALPHA_2_CODE_MF = 141;
  COUNTRY_ALPHA_2_CODE_MG = 142;
  COUNTRY_ALPHA_2_CODE_MH = 143;
  COUNTRY_ALPHA_2_CODE_MK = 144;
  COUNTRY_ALPHA_2_CODE_ML = 145;
  COUNTRY_ALPHA_2_CODE_MM = 146;
  COUNTRY_ALPHA_2_CODE_MN = 147;
  COUNTRY_ALPHA_2_CODE_MO = 148;
  COUNTRY_ALPHA_2_CODE_MP = 149;
  COUNTRY_ALPHA_2_CODE_MQ = 150;
  COUNTRY_ALPHA_2_CODE_MR = 151;
  COUNTRY_ALPHA_2_CODE_MS = 152;
  COUNTRY_ALPHA_2_CODE_MT = 153;
  COUNTRY_ALPHA_2_CODE_MU = 154;
  COUNTRY_ALPHA_2_CODE_MV = 155;
  COUNTRY_ALPHA_2_CODE_MW = 156;
  COUNTRY_ALPHA_2_CODE_MX = 157;
  COUNTRY_ALPHA_2_CODE_MY = 158;
  COUNTRY_ALPHA_2_CODE_MZ = 159;
  COUNTRY_ALPHA_2_CODE_NA = 160;
  COUNTRY_ALPHA_2_CODE_NC = 161;
  COUNTRY_ALPHA_2_CODE_NE = 162;
  COUNTRY_ALPHA_2_CODE_NF = 163;
  COUNTRY_ALPHA_2_CODE_NG = 164;
  COUNTRY_ALPHA_2_CODE_NI = 165;
  COUNTRY_ALPHA_2_CODE_NL = 166;
  COUNTRY_ALPHA_2_CODE_NO = 167;
  COUNTRY_ALPHA_2_CODE_NP = 168;
  COUNTRY_ALPHA_2_CODE_NR = 169;
  COUNTRY_ALPHA_2_CODE_NU = 170;
  COUNTRY_ALPHA_2_CODE_NZ = 171;
  COUNTRY_ALPHA_2_CODE_OM = 172;
  COUNTRY_ALPHA_2_CODE_PA = 173;
  COUNTRY_ALPHA_2_CODE_PE = 174;
  COUNTRY_ALPHA_2_CODE_PF = 175;
  COUNTRY_ALPHA_2_CODE_PG = 176;
  COUNTRY_ALPHA_2_CODE_PH = 177;
  COUNTRY_ALPHA_2_CODE_PK = 178;
  COUNTRY_ALPHA_2_CODE_PL = 179;
  COUNTRY_ALPHA_2_CODE_PM = 180;
  COUNTRY_ALPHA_2_CODE_PN = 181;
  COUNTRY_ALPHA_2_CODE_PR = 182;
  COUNTRY_ALPHA_2_CODE_PS = 183;
  COUNTRY_ALPHA_2_CODE_PT = 184;
  COUNTRY_ALPHA_2_CODE_PW = 185;
  COUNTRY_ALPHA_2_CODE_PY = 186;
  COUNTRY_ALPHA_2_CODE_QA = 187;
  COUNTRY_ALPHA_2_CODE_RE = 188;
  COUNTRY_ALPHA_2_CODE_RO = 189;
  COUNTRY_ALPHA_2_CODE_RS = 190;
  COUNTRY_ALPHA_2_CODE_RU = 191;
  COUNTRY_ALPHA_2_CODE_RW = 192;
  COUNTRY_ALPHA_2_CODE_SA = 193;
  COUNTRY_ALPHA_2_CODE_SB = 194;
  COUNTRY_ALPHA_2_CODE_SC = 195;
  COUNTRY_ALPHA_2_CODE_SD = 196;
  COUNTRY_ALPHA_2_CODE_SE = 197;
  COUNTRY_ALPHA_2_CODE_SG = 198;
  COUNTRY_ALPHA_2_CODE_SH = 199;
  COUNTRY_ALPHA_2_CODE_SI = 200;
  COUNTRY_ALPHA_2_CODE_SJ = 201;
  COUNTRY_ALPHA_2_CODE_SK = 202;
  COUNTRY_ALPHA_2_CODE_SL = 203;
  COUNTRY_ALPHA_2_CODE_SM = 204;
  COUNTRY_ALPHA_2_CODE_SN = 205;
  COUNTRY_ALPHA_2_CODE_SO = 206;
  COUNTRY_ALPHA_2_CODE_SR = 207;
  COUNTRY_ALPHA_2_CODE_SS = 208;
  COUNTRY_ALPHA_2_CODE_ST = 209;
  COUNTRY_ALPHA_2_CODE_SV = 210;
  COUNTRY_ALPHA_2_CODE_SX = 211;
  COUNTRY_ALPHA_2_CODE_SY = 212;
  COUNTRY_ALPHA_2_CODE_SZ = 213;
  COUNTRY_ALPHA_2_CODE_TC = 214;
  COUNTRY_ALPHA_2_CODE_TD = 215;
  COUNTRY_ALPHA_2_CODE_TF = 216;
  COUNTRY_ALPHA_2_CODE_TG = 217;
  COUNTRY_ALPHA_2_CODE_TH = 218;
  COUNTRY_ALPHA_2_CODE_TJ = 219;
  COUNTRY_ALPHA_2_CODE_TK = 220;
  COUNTRY_ALPHA_2_CODE_TL = 221;
  COUNTRY_ALPHA_2_CODE_TM = 222;
  COUNTRY_ALPHA_2_CODE_TN = 223;
  COUNTRY_ALPHA_2_CODE_TO = 224;
  COUNTRY_ALPHA_2_CODE_TR = 225;
  COUNTRY_ALPHA_2_CODE_TT = 226;
  COUNTRY_ALPHA_2_CODE_TV = 227;
  COUNTRY_ALPHA_2_CODE_TW = 228;
  COUNTRY_ALPHA_2_CODE_TZ = 229;
  COUNTRY_ALPHA_2_CODE_UA = 230;
  COUNTRY_ALPHA_2_CODE_UG = 231;
  COUNTRY_ALPHA_2_CODE_UM = 232;
  COUNTRY_ALPHA_2_CODE_US = 233;
  COUNTRY_ALPHA_2_CODE_UY = 234;
  COUNTRY_ALPHA_2_CODE_UZ = 235;
  COUNTRY_ALPHA_2_CODE_VA = 236;
  COUNTRY_ALPHA_2_CODE_VC = 237;
  COUNTRY_ALPHA_2_CODE_VE = 238;
  COUNTRY_ALPHA_2_CODE_VG = 239;
  COUNTRY_ALPHA_2_CODE_VI = 240;
  COUNTRY_ALPHA_2_CODE_VN = 241;
  COUNTRY_ALPHA_2_CODE_VU = 242;
  COUNTRY_ALPHA_2_CODE_WF = 243;
  COUNTRY_ALPHA_2_CODE_WS = 244;
  COUNTRY_ALPHA_2_CODE_YE = 245;
  COUNTRY_ALPHA_2_CODE_YT = 246;
  COUNTRY_ALPHA_2_CODE_ZA = 247;
  COUNTRY_ALPHA_2_CODE_ZM = 248;
  COUNTRY_ALPHA_2_CODE_ZW = 249;
}

enum CountryAlpha3Code {
  COUNTRY_ALPHA_3_CODE_NONE = 0;
  COUNTRY_ALPHA_3_CODE_ABW = 1;
  COUNTRY_ALPHA_3_CODE_AFG = 2;
  COUNTRY_ALPHA_3_CODE_AGO = 3;
  COUNTRY_ALPHA_3_CODE_AIA = 4;
  COUNTRY_ALPHA_3_CODE_ALA = 5;
  COUNTRY_ALPHA_3_CODE_ALB = 6;
  COUNTRY_ALPHA_3_CODE_AND = 7;
  COUNTRY_ALPHA_3_CODE_ARE = 8;
  COUNTRY_ALPHA_3_CODE_ARG = 9;
  COUNTRY_ALPHA_3_CODE_ARM = 10;
  COUNTRY_ALPHA_3_CODE_ASM = 11;
  COUNTRY_ALPHA_3_CODE_ATA = 12;
  COUNTRY_ALPHA_3_CODE_ATF = 13;
  COUNTRY_ALPHA_3_CODE_ATG = 14;
  COUNTRY_ALPHA_3_CODE_AUS = 15;
  COUNTRY_ALPHA_3_CODE_AUT = 16;
  COUNTRY_ALPHA_3_CODE_AZE = 17;
  COUNTRY_ALPHA_3_CODE_BDI = 18;
  COUNTRY_ALPHA_3_CODE_BEL = 19;
  COUNTRY_ALPHA_3_CODE_BEN = 20;
  COUNTRY_ALPHA_3_CODE_BES = 21;
  COUNTRY_ALPHA_3_CODE_BFA = 22;
  COUNTRY_ALPHA_3_CODE_BGD = 23;
  COUNTRY_ALPHA_3_CODE_BGR = 24;
  COUNTRY_ALPHA_3_CODE_BHR = 25;
  COUNTRY_ALPHA_3_CODE_BHS = 26;
  COUNTRY_ALPHA_3_CODE_BIH = 27;
  COUNTRY_ALPHA_3_CODE_BLM = 28;
  COUNTRY_ALPHA_3_CODE_BLR = 29;
  COUNTRY_ALPHA_3_CODE_BLZ = 30;
  COUNTRY_ALPHA_3_CODE_BMU = 31;
  COUNTRY_ALPHA_3_CODE_BOL = 32;
  COUNTRY_ALPHA_3_CODE_BRA = 33;
  COUNTRY_ALPHA_3_CODE_BRB = 34;
  COUNTRY_ALPHA_3_CODE_BRN = 35;
  COUNTRY_ALPHA_3_CODE_BTN = 36;
  COUNTRY_ALPHA_3_CODE_BVT = 37;
  COUNTRY_ALPHA_3_CODE_BWA = 38;
  COUNTRY_ALPHA_3_CODE_CAF = 39;
  COUNTRY_ALPHA_3_CODE_CAN = 40;
  COUNTRY_ALPHA_3_CODE_CCK = 41;
  COUNTRY_ALPHA_3_CODE_CHE = 42;
  COUNTRY_ALPHA_3_CODE_CHL = 43;
  COUNTRY_ALPHA_3_CODE_CHN = 44;
  COUNTRY_ALPHA_3_CODE_CIV = 45;
  COUNTRY_ALPHA_3_CODE_CMR = 46;
  COUNTRY_ALPHA_3_CODE_COD = 47;
  COUNTRY_ALPHA_3_CODE_COG = 48;
  COUNTRY_ALPHA_3_CODE_COK = 49;
  COUNTRY_ALPHA_3_CODE_COL = 50;
  COUNTRY_ALPHA_3_CODE_COM = 51;
  COUNTRY_ALPHA_3_CODE_CPV = 52;
  COUNTRY_ALPHA_3_CODE_CRI = 53;
  COUNTRY_ALPHA_3_CODE_CUB = 54;
  COUNTRY_ALPHA_3_CODE_CUW = 55;
  COUNTRY_ALPHA_3_CODE_CXR = 56;
  COUNTRY_ALPHA_3_CODE_CYM = 57;
  COUNTRY_ALPHA_3_CODE_CYP = 58;
  COUNTRY_ALPHA_3_CODE_CZE = 59;
  COUNTRY_ALPHA_3_CODE_DEU = 60;
  COUNTRY_ALPHA_3_CODE_DJI = 61;
  COUNTRY_ALPHA_3_CODE_DMA = 62;
  COUNTRY_ALPHA_3_CODE_DNK = 63;
  COUNTRY_ALPHA_3_CODE_DOM = 64;
  COUNTRY_ALPHA_3_CODE_DZA = 65;
  COUNTRY_ALPHA_3_CODE_ECU = 66;
  COUNTRY_ALPHA_3_CODE_EGY = 67;
  COUNTRY_ALPHA_3_CODE_ERI = 68;
  COUNTRY_ALPHA_3_CODE_ESH = 69;
  COUNTRY_ALPHA_3_CODE_ESP = 70;
  COUNTRY_ALPHA_3_CODE_EST = 71;
  COUNTRY_ALPHA_3_CODE_ETH = 72;
  COUNTRY_ALPHA_3_CODE_FIN = 73;
  COUNTRY_ALPHA_3_CODE_FJI = 74;
  COUNTRY_ALPHA_3_CODE_FLK = 75;
  COUNTRY_ALPHA_3_CODE_FRA = 76;
  COUNTRY_ALPHA_3_CODE_FRO = 77;
  COUNTRY_ALPHA_3_CODE_FSM = 78;
  COUNTRY_ALPHA_3_CODE_GAB = 79;
  COUNTRY_ALPHA_3_CODE_GBR = 80;
  COUNTRY_ALPHA_3_CODE_GEO = 81;
  COUNTRY_ALPHA_3_CODE_GGY = 82;
  COUNTRY_ALPHA_3_CODE_GHA = 83;
  COUNTRY_ALPHA_3_CODE_GIB = 84;
  COUNTRY_ALPHA_3_CODE_GIN = 85;
  COUNTRY_ALPHA_3_CODE_GLP = 86;
  COUNTRY_ALPHA_3_CODE_GMB = 87;
  COUNTRY_ALPHA_3_CODE_GNB = 88;
  COUNTRY_ALPHA_3_CODE_GNQ = 89;
  COUNTRY_ALPHA_3_CODE_GRC = 90;
  COUNTRY_ALPHA_3_CODE_GRD = 91;
  COUNTRY_ALPHA_3_CODE_GRL = 92;
  COUNTRY_ALPHA_3_CODE_GTM = 93;
  COUNTRY_ALPHA_3_CODE_GUF = 94;
  COUNTRY_ALPHA_3_CODE_GUM = 95;
  COUNTRY_ALPHA_3_CODE_GUY = 96;
  COUNTRY_ALPHA_3_CODE_HKG = 97;
  COUNTRY_ALPHA_3_CODE_HMD = 98;
  COUNTRY_ALPHA_3_CODE_HND = 99;
  COUNTRY_ALPHA_3_CODE_HRV = 100;
  COUNTRY_ALPHA_3_CODE_HTI = 101;
  COUNTRY_ALPHA_3_CODE_HUN = 102;
  COUNTRY_ALPHA_3_CODE_IDN = 103;
  COUNTRY_ALPHA_3_CODE_IMN = 104;
  COUNTRY_ALPHA_3_CODE_IND = 105;
  COUNTRY_ALPHA_3_CODE_IOT = 106;
  COUNTRY_ALPHA_3_CODE_IRL = 107;
  COUNTRY_ALPHA_3_CODE_IRN = 108;
  COUNTRY_ALPHA_3_CODE_IRQ = 109;
  COUNTRY_ALPHA_3_CODE_ISL = 110;
  COUNTRY_ALPHA_3_CODE_ISR = 111;
  COUNTRY_ALPHA_3_CODE_ITA = 112;
  COUNTRY_ALPHA_3_CODE_JAM = 113;
  COUNTRY_ALPHA_3_CODE_JEY = 114;
  COUNTRY_ALPHA_3_CODE_JOR = 115;
  COUNTRY_ALPHA_3_CODE_JPN = 116;
  COUNTRY_ALPHA_3_CODE_KAZ = 117;
  COUNTRY_ALPHA_3_CODE_KEN = 118;
  COUNTRY_ALPHA_3_CODE_KGZ = 119;
  COUNTRY_ALPHA_3_CODE_KHM = 120;
  COUNTRY_ALPHA_3_CODE_KIR = 121;
  COUNTRY_ALPHA_3_CODE_KNA = 122;
  COUNTRY_ALPHA_3_CODE_KOR = 123;
  COUNTRY_ALPHA_3_CODE_KWT = 124;
  COUNTRY_ALPHA_3_CODE_LAO = 125;
  COUNTRY_ALPHA_3_CODE_LBN = 126;
  COUNTRY_ALPHA_3_CODE_LBR = 127;
  COUNTRY_ALPHA_3_CODE_LBY = 128;
  COUNTRY_ALPHA_3_CODE_LCA = 129;
  COUNTRY_ALPHA_3_CODE_LIE = 130;
  COUNTRY_ALPHA_3_CODE_LKA = 131;
  COUNTRY_ALPHA_3_CODE_LSO = 132;
  COUNTRY_ALPHA_3_CODE_LTU = 133;
  COUNTRY_ALPHA_3_CODE_LUX = 134;
  COUNTRY_ALPHA_3_CODE_LVA = 135;
  COUNTRY_ALPHA_3_CODE_MAC = 136;
  COUNTRY_ALPHA_3_CODE_MAF = 137;
  COUNTRY_ALPHA_3_CODE_MAR = 138;
  COUNTRY_ALPHA_3_CODE_MCO = 139;
  COUNTRY_ALPHA_3_CODE_MDA = 140;
  COUNTRY_ALPHA_3_CODE_MDG = 141;
  COUNTRY_ALPHA_3_CODE_MDV = 142;
  COUNTRY_ALPHA_3_CODE_MEX = 143;
  COUNTRY_ALPHA_3_CODE_MHL = 144;
  COUNTRY_ALPHA_3_CODE_MKD = 145;
  COUNTRY_ALPHA_3_CODE_MLI = 146;
  COUNTRY_ALPHA_3_CODE_MLT = 147;
  COUNTRY_ALPHA_3_CODE_MMR = 148;
  COUNTRY_ALPHA_3_CODE_MNE = 149;
  COUNTRY_ALPHA_3_CODE_MNG = 150;
  COUNTRY_ALPHA_3_CODE_MNP = 151;
  COUNTRY_ALPHA_3_CODE_MOZ = 152;
  COUNTRY_ALPHA_3_CODE_MRT = 153;
  COUNTRY_ALPHA_3_CODE_MSR = 154;
  COUNTRY_ALPHA_3_CODE_MTQ = 155;
  COUNTRY_ALPHA_3_CODE_MUS = 156;
  COUNTRY_ALPHA_3_CODE_MWI = 157;
  COUNTRY_ALPHA_3_CODE_MYS = 158;
  COUNTRY_ALPHA_3_CODE_MYT = 159;
  COUNTRY_ALPHA_3_CODE_NAM = 160;
  COUNTRY_ALPHA_3_CODE_NCL = 161;
  COUNTRY_ALPHA_3_CODE_NER = 162;
  COUNTRY_ALPHA_3_CODE_NFK = 163;
  COUNTRY_ALPHA_3_CODE_NGA = 164;
  COUNTRY_ALPHA_3_CODE_NIC = 165;
  COUNTRY_ALPHA_3_CODE_NIU = 166;
  COUNTRY_ALPHA_3_CODE_NLD = 167;
  COUNTRY_ALPHA_3_CODE_NOR = 168;
  COUNTRY_ALPHA_3_CODE_NPL = 169;
  COUNTRY_ALPHA_3_CODE_NRU = 170;
  COUNTRY_ALPHA_3_CODE_NZL = 171;
  COUNTRY_ALPHA_3_CODE_OMN = 172;
  COUNTRY_ALPHA_3_CODE_PAK = 173;
  COUNTRY_ALPHA_3_CODE_PAN = 174;
  COUNTRY_ALPHA_3_CODE_PCN = 175;
  COUNTRY_ALPHA_3_CODE_PER = 176;
  COUNTRY_ALPHA_3_CODE_PHL = 177;
  COUNTRY_ALPHA_3_CODE_PLW = 178;
  COUNTRY_ALPHA_3_CODE_PNG = 179;
  COUNTRY_ALPHA_3_CODE_POL = 180;
  COUNTRY_ALPHA_3_CODE_PRI = 181;
  COUNTRY_ALPHA_3_CODE_PRK = 182;
  COUNTRY_ALPHA_3_CODE_PRT = 183;
  COUNTRY_ALPHA_3_CODE_PRY = 184;
  COUNTRY_ALPHA_3_CODE_PSE = 185;
  COUNTRY_ALPHA_3_CODE_PYF = 186;
  COUNTRY_ALPHA_3_CODE_QAT = 187;
  COUNTRY_ALPHA_3_CODE_REU = 188;
  COUNTRY_ALPHA_3_CODE_ROU = 189;
  COUNTRY_ALPHA_3_CODE_RUS = 190;
  COUNTRY_ALPHA_3_CODE_RWA = 191;
  COUNTRY_ALPHA_3_CODE_SAU = 192;
  COUNTRY_ALPHA_3_CODE_SDN = 193;
  COUNTRY_ALPHA_3_CODE_SEN = 194;
  COUNTRY_ALPHA_3_CODE_SGP = 195;
  COUNTRY_ALPHA_3_CODE_SGS = 196;
  COUNTRY_ALPHA_3_CODE_SHN = 197;
  COUNTRY_ALPHA_3_CODE_SJM = 198;
  COUNTRY_ALPHA_3_CODE_SLB = 199;
  COUNTRY_ALPHA_3_CODE_SLE = 200;
  COUNTRY_ALPHA_3_CODE_SLV = 201;
  COUNTRY_ALPHA_3_CODE_SMR = 202;
  COUNTRY_ALPHA_3_CODE_SOM = 203;
  COUNTRY_ALPHA_3_CODE_SPM = 204;
  COUNTRY_ALPHA_3_CODE_SRB = 205;
  COUNTRY_ALPHA_3_CODE_SSD = 206;
  COUNTRY_ALPHA_3_CODE_STP = 207;
  COUNTRY_ALPHA_3_CODE_SUR = 208;
  COUNTRY_ALPHA_3_CODE_SVK = 209;
  COUNTRY_ALPHA_3_CODE_SVN = 210;
  COUNTRY_ALPHA_3_CODE_SWE = 211;
  COUNTRY_ALPHA_3_CODE_SWZ = 212;
  COUNTRY_ALPHA_3_CODE_SXM = 213;
  COUNTRY_ALPHA_3_CODE_SYC = 214;
  COUNTRY_ALPHA_3_CODE_SYR = 215;
  COUNTRY_ALPHA_3_CODE_TCA = 216;
  COUNTRY_ALPHA_3_CODE_TCD = 217;
  COUNTRY_ALPHA_3_CODE_TGO = 218;
  COUNTRY_ALPHA_3_CODE_THA = 219;
  COUNTRY_ALPHA_3_CODE_TJK = 220;
  COUNTRY_ALPHA_3_CODE_TKL = 221;
  COUNTRY_ALPHA_3_CODE_TKM = 222;
  COUNTRY_ALPHA_3_CODE_TLS = 223;
  COUNTRY_ALPHA_3_CODE_TON = 224;
  COUNTRY_ALPHA_3_CODE_TTO = 225;
  COUNTRY_ALPHA_3_CODE_TUN = 226;
  COUNTRY_ALPHA_3_CODE_TUR = 227;
  COUNTRY_ALPHA_3_CODE_TUV = 228;
  COUNTRY_ALPHA_3_CODE_TWN = 229;
  COUNTRY_ALPHA_3_CODE_TZA = 230;
  COUNTRY_ALPHA_3_CODE_UGA = 231;
  COUNTRY_ALPHA_3_CODE_UKR = 232;
  COUNTRY_ALPHA_3_CODE_UMI = 233;
  COUNTRY_ALPHA_3_CODE_URY = 234;
  COUNTRY_ALPHA_3_CODE_USA = 235;
  COUNTRY_ALPHA_3_CODE_UZB = 236;
  COUNTRY_ALPHA_3_CODE_VAT = 237;
  COUNTRY_ALPHA_3_CODE_VCT = 238;
  COUNTRY_ALPHA_3_CODE_VEN = 239;
  COUNTRY_ALPHA_3_CODE_VGB = 240;
  COUNTRY_ALPHA_3_CODE_VIR = 241;
  COUNTRY_ALPHA_3_CODE_VNM = 242;
  COUNTRY_ALPHA_3_CODE_VUT = 243;
  COUNTRY_ALPHA_3_CODE_WLF = 244;
  COUNTRY_ALPHA_3_CODE_WSM = 245;
  COUNTRY_ALPHA_3_CODE_YEM = 246;
  COUNTRY_ALPHA_3_CODE_ZAF = 247;
  COUNTRY_ALPHA_3_CODE_ZMB = 248;
  COUNTRY_ALPHA_3_CODE_ZWE = 249;
}
