syntax = "proto3";

import "pb/geo/geo.gen.proto";
import "pb/money/money.gen.proto";

package pb.geo;

option go_package = "pbgeo";

message Country {
  string name = 1;
  CountryAlpha2Code alpha_2_code = 2;
  CountryAlpha3Code alpha_3_code = 3;
  uint32 numeric_code = 4;
  pb.money.CurrencyCode currency_code = 5;
}

message LatLng {
  int64 lat_picos = 1;
  int64 long_picos = 2;
}

message PostalAddress {
  enum Direction {
    NONE = 0;
    N = 1;
    S = 2;
    E = 3;
    W = 4;
    NE = 5;
    SE = 6;
    NW = 7;
    SW = 8;
  }
  uint64 street_number = 1;
  string street_number_postfix = 2;
  string street_name = 3;
  Direction street_pre_direction = 4;
  Direction street_post_direction = 5;
  string street_type_abbreviation = 6;
  string secondary_address_type_abbreviation = 7;
  string secondary_address_value = 8;
  string locality_name = 9;
  string region_code = 10;
  string postal_code = 11;
  CountryAlpha2Code country_alpha_2_code = 12;
}
