syntax = "proto3";

package pb.money;

option go_package = "pbmoney";

enum CurrencyCode {
  CURRENCY_CODE_NONE = 0;
  CURRENCY_CODE_AED = 1;
  CURRENCY_CODE_AFN = 2;
  CURRENCY_CODE_ALL = 3;
  CURRENCY_CODE_AMD = 4;
  CURRENCY_CODE_ANG = 5;
  CURRENCY_CODE_AOA = 6;
  CURRENCY_CODE_ARS = 7;
  CURRENCY_CODE_AUD = 8;
  CURRENCY_CODE_AWG = 9;
  CURRENCY_CODE_AZN = 10;
  CURRENCY_CODE_BAM = 11;
  CURRENCY_CODE_BBD = 12;
  CURRENCY_CODE_BDT = 13;
  CURRENCY_CODE_BGN = 14;
  CURRENCY_CODE_BHD = 15;
  CURRENCY_CODE_BIF = 16;
  CURRENCY_CODE_BMD = 17;
  CURRENCY_CODE_BND = 18;
  CURRENCY_CODE_BOB = 19;
  CURRENCY_CODE_BRL = 20;
  CURRENCY_CODE_BSD = 21;
  CURRENCY_CODE_BWP = 22;
  CURRENCY_CODE_BYR = 23;
  CURRENCY_CODE_BZD = 24;
  CURRENCY_CODE_CAD = 25;
  CURRENCY_CODE_CHF = 26;
  CURRENCY_CODE_CLP = 27;
  CURRENCY_CODE_CNY = 28;
  CURRENCY_CODE_COP = 29;
  CURRENCY_CODE_CRC = 30;
  CURRENCY_CODE_CUP = 31;
  CURRENCY_CODE_CVE = 32;
  CURRENCY_CODE_CZK = 33;
  CURRENCY_CODE_DJF = 34;
  CURRENCY_CODE_DKK = 35;
  CURRENCY_CODE_DOP = 36;
  CURRENCY_CODE_DZD = 37;
  CURRENCY_CODE_EGP = 38;
  CURRENCY_CODE_ERN = 39;
  CURRENCY_CODE_ETB = 40;
  CURRENCY_CODE_EUR = 41;
  CURRENCY_CODE_FJD = 42;
  CURRENCY_CODE_FKP = 43;
  CURRENCY_CODE_GBP = 44;
  CURRENCY_CODE_GEL = 45;
  CURRENCY_CODE_GHS = 46;
  CURRENCY_CODE_GIP = 47;
  CURRENCY_CODE_GMD = 48;
  CURRENCY_CODE_GNF = 49;
  CURRENCY_CODE_GTQ = 50;
  CURRENCY_CODE_GYD = 51;
  CURRENCY_CODE_HKD = 52;
  CURRENCY_CODE_HNL = 53;
  CURRENCY_CODE_HRK = 54;
  CURRENCY_CODE_HUF = 55;
  CURRENCY_CODE_IDR = 56;
  CURRENCY_CODE_ILS = 57;
  CURRENCY_CODE_INR = 58;
  CURRENCY_CODE_IQD = 59;
  CURRENCY_CODE_IRR = 60;
  CURRENCY_CODE_ISK = 61;
  CURRENCY_CODE_JMD = 62;
  CURRENCY_CODE_JOD = 63;
  CURRENCY_CODE_JPY = 64;
  CURRENCY_CODE_KES = 65;
  CURRENCY_CODE_KGS = 66;
  CURRENCY_CODE_KHR = 67;
  CURRENCY_CODE_KMF = 68;
  CURRENCY_CODE_KPW = 69;
  CURRENCY_CODE_KRW = 70;
  CURRENCY_CODE_KWD = 71;
  CURRENCY_CODE_KYD = 72;
  CURRENCY_CODE_KZT = 73;
  CURRENCY_CODE_LAK = 74;
  CURRENCY_CODE_LBP = 75;
  CURRENCY_CODE_LKR = 76;
  CURRENCY_CODE_LRD = 77;
  CURRENCY_CODE_LYD = 78;
  CURRENCY_CODE_MAD = 79;
  CURRENCY_CODE_MDL = 80;
  CURRENCY_CODE_MGA = 81;
  CURRENCY_CODE_MKD = 82;
  CURRENCY_CODE_MMK = 83;
  CURRENCY_CODE_MNT = 84;
  CURRENCY_CODE_MOP = 85;
  CURRENCY_CODE_MRO = 86;
  CURRENCY_CODE_MUR = 87;
  CURRENCY_CODE_MVR = 88;
  CURRENCY_CODE_MWK = 89;
  CURRENCY_CODE_MXN = 90;
  CURRENCY_CODE_MYR = 91;
  CURRENCY_CODE_MZN = 92;
  CURRENCY_CODE_NGN = 93;
  CURRENCY_CODE_NIO = 94;
  CURRENCY_CODE_NOK = 95;
  CURRENCY_CODE_NPR = 96;
  CURRENCY_CODE_NZD = 97;
  CURRENCY_CODE_OMR = 98;
  CURRENCY_CODE_PEN = 99;
  CURRENCY_CODE_PGK = 100;
  CURRENCY_CODE_PHP = 101;
  CURRENCY_CODE_PKR = 102;
  CURRENCY_CODE_PLN = 103;
  CURRENCY_CODE_PYG = 104;
  CURRENCY_CODE_QAR = 105;
  CURRENCY_CODE_RON = 106;
  CURRENCY_CODE_RSD = 107;
  CURRENCY_CODE_RUB = 108;
  CURRENCY_CODE_RWF = 109;
  CURRENCY_CODE_SAR = 110;
  CURRENCY_CODE_SBD = 111;
  CURRENCY_CODE_SCR = 112;
  CURRENCY_CODE_SDG = 113;
  CURRENCY_CODE_SEK = 114;
  CURRENCY_CODE_SGD = 115;
  CURRENCY_CODE_SHP = 116;
  CURRENCY_CODE_SLL = 117;
  CURRENCY_CODE_SOS = 118;
  CURRENCY_CODE_SRD = 119;
  CURRENCY_CODE_SSP = 120;
  CURRENCY_CODE_STD = 121;
  CURRENCY_CODE_SYP = 122;
  CURRENCY_CODE_SZL = 123;
  CURRENCY_CODE_THB = 124;
  CURRENCY_CODE_TJS = 125;
  CURRENCY_CODE_TMT = 126;
  CURRENCY_CODE_TND = 127;
  CURRENCY_CODE_TOP = 128;
  CURRENCY_CODE_TRY = 129;
  CURRENCY_CODE_TTD = 130;
  CURRENCY_CODE_TWD = 131;
  CURRENCY_CODE_TZS = 132;
  CURRENCY_CODE_UAH = 133;
  CURRENCY_CODE_UGX = 134;
  CURRENCY_CODE_USD = 135;
  CURRENCY_CODE_UYU = 136;
  CURRENCY_CODE_UZS = 137;
  CURRENCY_CODE_VEF = 138;
  CURRENCY_CODE_VND = 139;
  CURRENCY_CODE_VUV = 140;
  CURRENCY_CODE_WST = 141;
  CURRENCY_CODE_XAF = 142;
  CURRENCY_CODE_XCD = 143;
  CURRENCY_CODE_XOF = 144;
  CURRENCY_CODE_XPF = 145;
  CURRENCY_CODE_YER = 146;
  CURRENCY_CODE_ZAR = 147;
  CURRENCY_CODE_ZMW = 148;
  CURRENCY_CODE_ZWL = 149;
}
